--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,42 +1,64 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!-- HEADER
+//────  ──────────────────────────────────────────────────────────────────────────────────
+//────  ────────────────────────────────────────────────────────────────────────────────── -->
+<header class="header">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+  <!-- NAVBAR
+  //────  ──────────────────────────────────────────────────────────────────────────────────
+  //────  ────────────────────────────────────────────────────────────────────────────────── -->
+  <nav class="main-navi navbar navbar-light bg-white">
+    <div class="main-navi__container container">
 
-<div class="hero jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="hero__title display-2">Boilerplate + BS4</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-  </div>
-</div>
+      <a href="#" class="main-navi__brand navbar-brand">
+        <img src="{{site.baseurl}}/assets/img/logo.png" alt="DSGN Company">
+      </a><!-- .navbar-brand -->
+
+      <div class="social-and-toggler-wrapper">
+        
+        <ul class="social">
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <div class="fab fa-facebook-f"></div>
+            </a><!-- .social__link -->
+          </li><!-- .social__item -->
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <div class="fab fa-instagram"></div>
+            </a><!-- .social__link -->
+          </li><!-- .social__item -->
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <div class="fab fa-twitter"></div>
+            </a><!-- .social__link -->
+          </li><!-- .social__item -->
+          <li class="social__item">
+            <a href="#" class="social__link">
+              <div class="fab fa-linkedin"></div>
+            </a><!-- .social__link -->
+          </li><!-- .social__item -->
+        </ul><!-- .social__link -->
+
+        <button class="toggler navbar-toggler"  id="main-navi-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+          <div class="toggler__icon"></div><span class="toggler__text">MENU</span>
+        </button><!-- .navbar-toggler -->
+
+      </div><!-- .social-and-toggler-wrapper -->
+
+      <div class="collapse navbar-collapse text-center" id="navbarToggler">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li><!-- .nav-item -->
+          <li class="nav-item">
+            <a class="nav-link" href="#">Design</a>
+          </li><!-- .nav-item -->
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li><!-- .nav-item -->
+        </ul><!-- .navbar-nav -->
+      </div><!-- .navbar-collapse -->
+
+    </div><!-- .container -->
+  </nav><!-- .navbar -->
+
+</header>
