--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,15 +1,126 @@
-body
-  background: #345
+/* //────  ──────────────────────────────────────────────────────────────────────────────────
+  HEADER
+//────  ────────────────────────────────────────────────────────────────────────────────── */
+.main-navi
+  padding: 0
+  overflow: hidden
+
+  &__container
+    align-items: stretch !important // overwritting Bootstrap property for .container
+
+  &__brand
+    margin-top: 1rem
+    margin-bottom: 1rem
+
+.social-and-toggler-wrapper
+  display: flex
+
+.social
+  list-style: none
+  margin: 0 2rem 0 0
+  align-items: center
+  display: none
+
+  // 576px
+  @media (min-width: 36em)
+    display: flex
+
+  &__link
+    color: #101010
+    padding: 1rem
+
+/* //────  ────────────────────────────────────────────────────────────────────────────────── 
+  TOGGLER
+//────  ────────────────────────────────────────────────────────────────────────────────── */
+.toggler
+  border: none
+  display: flex
+  align-items: center
+  padding-left: 3rem
+  position: relative
+  border-radius: 0
+
+  // 576px
+  @media (min-width: 36em)
+    background: #101010
+
+  // Toggler full width background
+  &:after
+    content: ""
+    position: absolute
+    top: 0
+    bottom: 0
+    width: 320px 
+    left: 100%
+    background: #101010
+    pointer-events: none
+    display: none
+
+    // 576px
+    @media (min-width: 36em)
+      display: block
+
+  // Toggler Hover State
+  &:hover 
+    & .toggler__icon
+      background: transparent
+      transform: rotate(-90deg)
+
+      &:before
+        transform: rotate(45deg)
+
+      &:after
+        transform: rotate(-45deg)
+  
+// Toggler Active State - by adding .toggler--active class using JS
+.toggler--active .toggler__icon
+  transform: rotate(-90deg)
+  background: transparent
+
+  &:before
+    transform: rotate(45deg)
+    top: 0rem
+  
+  &:after
+    transform: rotate(-45deg)
+    bottom: 0rem
+
+// Toggler bars
+.toggler__icon
+  height: .2rem
+  width: 2rem
+  background: #000
+  position: relative
+  transition: all .3s ease-in
+
+  // 576px
+  @media (min-width: 36em)
+    background: #fff
+
+  &:before, &:after
+    content: ''
+    position: absolute
+    left: 0
+    background: #000
+    height: .2rem
+    width: 2rem
+    transition: all .3s ease-in
+
+    // 576px
+    @media (min-width: 36em)
+      background: #fff
+
+  &:before
+    top: .6rem
+
+  &:after
+    bottom: .6rem
+
+.toggler__text
+  display: none
+  padding: 1.2rem
   color: #fff
 
-.hero
-  background: url('https://images.unsplash.com/photo-1495188821276-84991753921a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cd1bae27182139bf356d548183ef324f&auto=format&fit=crop&w=1350&q=80')
-  background-size: cover
-  height: 100vh
-  text-align: center
-  display: flex
-  justify-content: center
-  align-items: center
-
-  &__title
-    color: #fff
+  // 576px
+  @media (min-width: 36em)
+    display: block
