--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -36,13 +36,13 @@
   border: none
   display: flex
   align-items: center
-  padding-left: 3rem
   position: relative
   border-radius: 0
 
   // 576px
   @media (min-width: 36em)
     background: #101010
+    padding-left: 3rem
 
   // Toggler full width background
   &:after
@@ -60,17 +60,18 @@
     @media (min-width: 36em)
       display: block
 
-  // Toggler Hover State
-  &:hover 
-    & .toggler__icon
-      background: transparent
-      transform: rotate(-90deg)
+// Toggler Hover State - disabled for touch devices
+@media (hover: hover)
+  .toggler:hover .toggler__icon
+    background: transparent
+    transform: rotate(-90deg)
 
-      &:before
-        transform: rotate(45deg)
+    &:before
+      transform: rotate(45deg)
 
-      &:after
-        transform: rotate(-45deg)
+    &:after
+      transform: rotate(-45deg)
+
   
 // Toggler Active State - by adding .toggler--active class using JS
 .toggler--active .toggler__icon
