--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,13 +46,13 @@
 
       <div class="collapse navbar-collapse text-center" id="navbarToggler">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+          <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="nav-link" href="#" data-toggle="collapse">Home</a>
           </li><!-- .nav-item -->
-          <li class="nav-item">
+          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#">Design</a>
           </li><!-- .nav-item -->
-          <li class="nav-item">
+          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#">Contact</a>
           </li><!-- .nav-item -->
         </ul><!-- .navbar-nav -->
