Make social icons section visible on mobile devices
By copying it from .navbar to .collapse
and using media queries to change display properties

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 
       <div class="social-and-toggler-wrapper">
         
-        <ul class="social">
+        <ul class="social social--desktop">
           <li class="social__item">
             <a href="#" class="social__link">
               <div class="fab fa-facebook-f"></div>
@@ -45,6 +45,30 @@
       </div><!-- .social-and-toggler-wrapper -->
 
       <div class="collapse navbar-collapse text-center" id="navbarToggler">
+
+          <ul class="social social--mobile">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <div class="fab fa-facebook-f"></div>
+              </a><!-- .social__link -->
+            </li><!-- .social__item -->
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <div class="fab fa-instagram"></div>
+              </a><!-- .social__link -->
+            </li><!-- .social__item -->
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <div class="fab fa-twitter"></div>
+              </a><!-- .social__link -->
+            </li><!-- .social__item -->
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <div class="fab fa-linkedin"></div>
+              </a><!-- .social__link -->
+            </li><!-- .social__item -->
+          </ul><!-- .social__link --> 
+
         <ul class="navbar-nav">
           <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#" data-toggle="collapse">Home</a>
