Add a mobile view for the Hero section

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,12 +4,14 @@
 <section class="hero">
 
   <div class="hero__wrapper container">
-    <p class="hero__text lead">Need our help? </p>
-    <h1 class="hero__title">Top designers</h1>
-    <button type="button" class="btn btn-outline-light">Check us!</button>
+    <div class="hero__text-wrap">
+      <p class="hero__text lead">Need our help?</p>
+      <h1 class="hero__title">Top designers</h1>
+    </div>
+    <button type="button" class="hero__btn btn btn-outline-light">Check us!</button>
 
-    <a href="#">
-      <img src="{{site.baseurl}}/assets/img/double-arrow.svg" alt="double arrow pointing down" height="40px">
+    <a class="hero__arrow" href="#">
+      <img src="{{site.baseurl}}/assets/img/double-arrow.svg" alt="double arrow pointing down" height="26px">
     </a>
   </div><!-- .container -->
 
