--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+
+        <!-- Google Fonts -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Quicksand:300,400,700&amp;subset=latin-ext">
     </head>
     <body>
 
