--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -27,10 +27,13 @@ h1, h2, h3, h4, h5, h6
   font-size: 6.8rem
   line-height: 1.05
   letter-spacing: -1px
+  font-family: 'Quicksand', sans-serif;
+  color: #fff
 
 .large, h2
   font-size: 4.2rem
   line-height: 1.14
+  font-family: 'Quicksand', sans-serif;
 
 .bigger, h3
   font-size: 2.6rem
@@ -44,7 +47,11 @@ h1, h2, h3, h4, h5, h6
   font-size: 1rem
   line-height: 1.2
 
-
+.lead
+  font-family: 'Quicksand', sans-serif;
+  color: #fff
+  font-size: 2.4rem
+  font-weight: light
 
 p
   margin: 0 0 2rem 0
