Fix the url of the Hero Sections background image

--- a/assets/css/3-sections/_hero.sass
+++ b/assets/css/3-sections/_hero.sass
@@ -1,9 +1,11 @@
 .hero
   background:
     color: #090909
-    image: url("/../assets/img/bg_hero.jpg")
+    image: url("../img/bg_hero.jpg")
     size: cover
+    position: 50% 50%
     repeat: no-repeat
+
 
   &__wrapper
     display: flex
