Add desktop view of the Hero section

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,16 +3,14 @@
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <section class="hero">
 
-  <div class="hero__wrapper container">
-    <div class="hero__text-wrap">
-      <p class="hero__text lead">Need our help?</p>
-      <h1 class="hero__title">Top designers</h1>
-    </div>
-    <button type="button" class="hero__btn btn btn-outline-light">Check us!</button>
+  <div class="hero__text-wrap">
+    <p class="hero__text lead">Need our help?</p>
+    <h1 class="hero__title">Top designers</h1>
+  </div><!-- .hero-text-wrap -->
+  <button type="button" class="hero__btn btn btn-outline-light">Check us!</button>
 
-    <a class="hero__arrow" href="#">
-      <img src="{{site.baseurl}}/assets/img/double-arrow.svg" alt="double arrow pointing down" height="26px">
-    </a>
-  </div><!-- .container -->
+  <a class="hero__arrow-link" href="#">
+    <img class="hero__arrow-image" src="{{site.baseurl}}/assets/img/double-arrow.svg" alt="double arrow pointing down" height="26px">
+  </a><!-- .hero__arrow-link -->
 
 </section><!-- .hero -->
