--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,6 @@
 
 @import "3-sections/header";
 @import "3-sections/hero";
-@import "3-sections/progress";
+@import "3-sections/growth";
 
 @import "4-layouts/home";
