Add Radial Indicators to the Growth section

--- a/_includes/growth.html
+++ b/_includes/growth.html
@@ -1,6 +1,23 @@
 <!-- PROGRESS
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
-<section class="growth">
-  
+<section class="growth container">
+
+  <div class="growth__wrapper row">
+
+    <div class="growth__col col-md-4">
+      <div  class="growth__indicator" id="indicatorContainer1"></div>
+      <p class="growth__text">Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
+    </div><!-- .growth__col -->
+    <div class="growth__col col-md-4">
+      <div  class="growth__indicator" id="indicatorContainer2"></div>
+      <p class="growth__text">Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
+    </div><!-- .growth__col -->
+    <div class="growth__col col-md-4">
+      <div  class="growth__indicator" id="indicatorContainer3"></div>
+      <p class="growth__text">Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
+    </div><!-- .growth__col -->
+
+  </div><!-- .growth__wrapper -->
+
 </section>
