--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -112,7 +112,7 @@ body
   background: $bg-color
   font-size: 1.6rem
   line-height: 1.6
-  font-family: 'Fira Sans', sans-serif
+  font-family: 'Quicksand', sans-serif
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
