--- a/_includes/growth.html
+++ b/_includes/growth.html
@@ -2,22 +2,40 @@
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <section class="growth container">
-
   <div class="growth__wrapper row">
 
+      <div class="growth__col col-md-4">
+        <div class="indicator-wrap">
+          <div  class="indicator" id="indicatorContainer1"></div>
+          <div class="indicator__text">
+            <span class="indicator__number">50</span>
+            <span class="indicator__desc">big projects</span>
+          </div><!-- .indicator__text -->
+        </div><!-- .indicator-wrap -->
+        <p class="growth__text">Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
+      </div><!-- .growth__col -->
+
     <div class="growth__col col-md-4">
-      <div  class="growth__indicator" id="indicatorContainer1"></div>
+      <div class="indicator-wrap">
+        <div  class="indicator" id="indicatorContainer2"></div>
+        <div class="indicator__text">
+          <span class="indicator__number">35</span>
+          <span class="indicator__desc">clients</span>
+        </div><!-- .indicator__text -->
+      </div><!-- .indicator-wrap -->
       <p class="growth__text">Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
     </div><!-- .growth__col -->
+
     <div class="growth__col col-md-4">
-      <div  class="growth__indicator" id="indicatorContainer2"></div>
-      <p class="growth__text">Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
-    </div><!-- .growth__col -->
-    <div class="growth__col col-md-4">
-      <div  class="growth__indicator" id="indicatorContainer3"></div>
+      <div class="indicator-wrap">
+        <div  class="indicator" id="indicatorContainer3"></div>
+        <div class="indicator__text">
+          <span class="indicator__number">80</span>
+          <span class="indicator__desc">months</span>
+        </div><!-- .indicator__text -->
+      </div><!-- .indicator-wrap -->
       <p class="growth__text">Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
     </div><!-- .growth__col -->
 
   </div><!-- .growth__wrapper -->
-
 </section>
