--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -4,3 +4,9 @@ $accent-color: #BD5248
 $bg-color: #F6F6F8
 $link-color: $accent-color
 $selection-color: #FFF498
+
+
+// Colors
+$indicator1: #f34739
+$indicator2: #009989
+$indicator3: #152b3c
