--- a/assets/css/3-sections/_growth.sass
+++ b/assets/css/3-sections/_growth.sass
@@ -1,7 +1,13 @@
 .growth
 
   &__wrapper
-    margin-top: 4rem
+    margin-top: 3.3rem
+    margin-bottom: 4rem
+
+    // 816px
+    @media (min-width: 51em)
+      margin-top: 4.3rem
+      margin-bottom: 8rem
 
   &__col
     display: flex
@@ -14,9 +20,17 @@
     margin-bottom: 4rem
     font-size: 1.8rem
 
+    // 816px
+    @media (min-width: 51em)
+      margin-bottom: 0
+
 .indicator
   margin-bottom: 2rem
   transform: rotate(145deg)
+
+  // 816px
+  @media (min-width: 51em)
+    margin-bottom: 3rem
   
   &-wrap
     position: relative
