--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,5 +9,6 @@
 @import "3-sections/header";
 @import "3-sections/hero";
 @import "3-sections/growth";
+@import "3-sections/meet-us";
 
 @import "4-layouts/home";
