Make .hero__text a separate .lead block
By moving .hero__text element code to _home.sass
and by changing its name to .lead

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,10 +3,11 @@
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <section class="hero">
 
-  <div class="hero__text-wrap">
-    <p class="hero__text lead">Need our help?</p>
-    <h1 class="hero__title">Top designers</h1>
-  </div><!-- .hero-text-wrap -->
+  <div class="lead">
+    <p class="lead__text">Need our help?</p>
+    <h1 class="lead__title">Top designers</h1>
+  </div><!-- .lead -->
+  
   <button type="button" class="hero__btn btn btn-outline-light">Check us!</button>
 
   <a class="hero__arrow-link" href="#">
