--- a/assets/css/3-sections/_hero.sass
+++ b/assets/css/3-sections/_hero.sass
@@ -10,55 +10,6 @@
   justify-content: center
   align-items: center
 
-  &__text-wrap
-    text-align: center
-    overflow: hidden
-    margin: 11rem 1.5rem 4.4rem
-
-    // 816px
-    @media (min-width: 51em)
-      margin: 16rem 1.5rem 4rem
-    
-  &__text
-    margin-bottom: .5rem
-    text-align: center
-    position: relative
-    display: inline-block
-
-    // 816px
-    @media (min-width: 51em)
-      margin-bottom: -.6rem
-      font-size: 3rem
-
-    // Horizontal Lines-On-Sides 
-    &:before, 
-    &:after
-      content: ''
-      position: absolute
-      height: 1px
-      width: 100%
-      background: #fff
-      top: 50%
-
-    &:before
-      right: 100%
-      margin-right: .5em
-    
-    &:after
-      left: 100%
-      margin-left: .5em
-
-  &__title
-    margin: 0
-    text-transform: uppercase
-    font-size: 5.4rem
-    letter-spacing: 0.03125em
-    text-align: center
-
-    // 816px
-    @media (min-width: 51em)
-      font-size: 7.2rem
-
   &__btn
     font-size: 1.4rem
     padding-left: 1.785em
@@ -89,3 +40,27 @@
         transform: translateY(-15%)
       50%
         transform: translateY(15%)
+
+  //──── margins and MQ for lead text ──────────────────────────────────────────────────────────────────────────────────
+  .lead
+    margin: 11rem 1.5rem 4.4rem
+
+    // 816px
+    @media (min-width: 51em)
+      margin: 16rem 1.5rem 4rem
+
+    &__text
+      font-size: 2.4rem
+
+      // 816px
+      @media (min-width: 51em)
+        margin-bottom: -.6rem
+        font-size: 3rem
+    
+    &__title
+      font-size: 5.4rem
+      margin-top: .5rem
+
+      // 816px
+      @media (min-width: 51em)
+        font-size: 7.2rem
