--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -1,1 +1,43 @@
-// Layout Home
+/* //────  ──────────────────────────────────────────────────────────────────────────────────
+  LEAD
+//────  ────────────────────────────────────────────────────────────────────────────────── */
+.lead
+  text-align: center
+  overflow: hidden
+ 
+  &__text
+    margin-bottom: 0
+    text-align: center
+    position: relative
+    display: inline-block
+    font-family: 'Quicksand', sans-serif;
+    color: #fff
+    font-size: 1.8rem
+    font-weight: light
+
+    // Horizontal Lines-On-Sides 
+    &:before, 
+    &:after
+      content: ''
+      position: absolute
+      height: 1px
+      width: 4em
+      background: #fff
+      top: 50%
+
+    &:before
+      right: 100%
+      margin-right: .5em
+    
+    &:after
+      left: 100%
+      margin-left: .5em
+
+  &__title
+    margin-top: -1rem
+    margin-bottom: 0
+    text-transform: uppercase
+    font-size: 4.8rem
+    letter-spacing: 0.03125em
+    text-align: center
+    color: #fff
