--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -686,44 +686,6 @@ body {
       justify-content: center;
   -ms-flex-align: center;
       align-items: center; }
-  .hero__text-wrap {
-    text-align: center;
-    overflow: hidden;
-    margin: 11rem 1.5rem 4.4rem; }
-    @media (min-width: 51em) {
-      .hero__text-wrap {
-        margin: 16rem 1.5rem 4rem; } }
-  .hero__text {
-    margin-bottom: .5rem;
-    text-align: center;
-    position: relative;
-    display: inline-block; }
-    @media (min-width: 51em) {
-      .hero__text {
-        margin-bottom: -.6rem;
-        font-size: 3rem; } }
-    .hero__text:before, .hero__text:after {
-      content: '';
-      position: absolute;
-      height: 1px;
-      width: 100%;
-      background: #fff;
-      top: 50%; }
-    .hero__text:before {
-      right: 100%;
-      margin-right: .5em; }
-    .hero__text:after {
-      left: 100%;
-      margin-left: .5em; }
-  .hero__title {
-    margin: 0;
-    text-transform: uppercase;
-    font-size: 5.4rem;
-    letter-spacing: 0.03125em;
-    text-align: center; }
-    @media (min-width: 51em) {
-      .hero__title {
-        font-size: 7.2rem; } }
   .hero__btn {
     font-size: 1.4rem;
     padding-left: 1.785em;
@@ -750,6 +712,23 @@ body {
     transform: translateY(-15%); }
   50% {
     transform: translateY(15%); } }
+  .hero .lead {
+    margin: 11rem 1.5rem 4.4rem; }
+    @media (min-width: 51em) {
+      .hero .lead {
+        margin: 16rem 1.5rem 4rem; } }
+    .hero .lead__text {
+      font-size: 2.4rem; }
+      @media (min-width: 51em) {
+        .hero .lead__text {
+          margin-bottom: -.6rem;
+          font-size: 3rem; } }
+    .hero .lead__title {
+      font-size: 5.4rem;
+      margin-top: .5rem; }
+      @media (min-width: 51em) {
+        .hero .lead__title {
+          font-size: 7.2rem; } }
 
 .growth__wrapper {
   margin-top: 3.3rem;
@@ -810,3 +789,42 @@ body {
 
 .growth__col:nth-child(3) .indicator__number {
   color: #152b3c; }
+
+.meet-us {
+  background-color: #000000; }
+
+/* //────  ──────────────────────────────────────────────────────────────────────────────────
+  LEAD */
+.lead {
+  text-align: center;
+  overflow: hidden; }
+  .lead__text {
+    margin-bottom: 0;
+    text-align: center;
+    position: relative;
+    display: inline-block;
+    font-family: 'Quicksand', sans-serif;
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: light; }
+    .lead__text:before, .lead__text:after {
+      content: '';
+      position: absolute;
+      height: 1px;
+      width: 4em;
+      background: #fff;
+      top: 50%; }
+    .lead__text:before {
+      right: 100%;
+      margin-right: .5em; }
+    .lead__text:after {
+      left: 100%;
+      margin-left: .5em; }
+  .lead__title {
+    margin-top: -1rem;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-size: 4.8rem;
+    letter-spacing: 0.03125em;
+    text-align: center;
+    color: #fff; }
