Finish the Meet Us section

--- a/assets/css/3-sections/_meet-us.sass
+++ b/assets/css/3-sections/_meet-us.sass
@@ -1,3 +1,10 @@
 .meet-us
   background:
     color: #000000
+    image: url("../img/bg_our-team.jpg")
+    size: cover
+    position: 50% 50%
+    repeat: no-repeat
+
+  .container
+    display: flex
