--- a/_includes/meet-us.html
+++ b/_includes/meet-us.html
@@ -4,7 +4,7 @@
 <section class="meet-us">
   <div class="container">
 
-    <div class="lead">
+    <div class="lead lead--border">
       <p class="lead__text">Meet us!</p>
       <h2 class="lead__title">our team</h2>
     </div><!-- .lead -->
