--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -41,3 +41,18 @@
     letter-spacing: 0.03125em
     text-align: center
     color: #fff
+
+  &--border
+    border: 2px solid #fff
+    flex: 1
+    margin-top: 2rem
+    margin-bottom: 2rem
+    padding-top: 4.2rem
+    padding-bottom: 4.2rem
+
+    // 816px
+    @media (min-width: 51em)
+      margin-top: 5rem
+      margin-bottom: 5rem
+      padding-top: 6.2rem
+      padding-bottom: 6.2rem
