--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,5 +10,6 @@
 @import "3-sections/hero";
 @import "3-sections/growth";
 @import "3-sections/meet-us";
+@import "3-sections/staff";
 
 @import "4-layouts/home";
