Add .member__image part to the .member block

--- a/_includes/staff.html
+++ b/_includes/staff.html
@@ -6,10 +6,12 @@
       <div class="member__info col-md-6">
         <h2 class="member__name">adrianna</h2>
         <p class="member__role">Senior Graphic Designer</p>
-        <p class="member__desc">She is the graphic designer with 3 years of professional experience.</p>
+        <p class="member__desc col-10 offset-1 col-sm-8 offset-sm-2">She is the graphic designer with 3 years of professional experience.</p>
       </div><!-- .member__desc -->
 
-      <div class="member__image col-md-6"></div><!-- .member__image -->
+      <div class="member__image col-md-6">
+        <div class="member__image-border"></div><!-- .member__image-border -->
+      </div><!-- .member__image -->
     </div><!-- .member -->
 
   </div><!-- .container -->
