--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -794,12 +794,25 @@ body {
     display: -ms-flexbox;
     display: flex; }
 
+.staff {
+  padding-top: 2.5rem; }
+  @media (min-width: 48.0625em) {
+    .staff {
+      padding-top: 5rem; } }
+
 .member__info {
   border: 3px solid #000;
   border-bottom: none;
   margin: 2rem 1.5rem 0;
   text-align: center;
   font-family: 'Quicksand', sans-serif; }
+  @media (min-width: 48.0625em) {
+    .member__info {
+      margin: 2rem 0;
+      border-bottom: 3px solid #000;
+      border-left: none;
+      -ms-flex-order: 2;
+          order: 2; } }
 
 .member__name {
   text-transform: uppercase;
@@ -824,7 +837,33 @@ body {
     background: #f34739; }
 
 .member__desc {
-  margin-bottom: 4.5rem; }
+  margin-bottom: 4.5rem;
+  font-size: 2rem;
+  line-height: 1.1; }
+
+.member__image {
+  min-height: 24rem;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  background-color: #000;
+  background-image: url("../img/team/team_adrianna.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat; }
+  .member__image-border {
+    border: 3px solid #fff;
+    border-top: none;
+    margin: 0 1.5rem 2rem;
+    width: 100%; }
+    @media (min-width: 48.0625em) {
+      .member__image-border {
+        margin-top: 2rem;
+        margin-right: 0;
+        border-top: 3px solid #fff;
+        border-right: none;
+        -ms-flex-order: 1;
+            order: 1; } }
 
 /* //────  ──────────────────────────────────────────────────────────────────────────────────
   LEAD */
