Add .member--reverse modifier

--- a/_includes/staff.html
+++ b/_includes/staff.html
@@ -2,18 +2,34 @@
 
   <div class="container">
 
-    <div class="member row">
+    <div class="member member--reverse row">
       <div class="member__info col-md-6">
-        <h2 class="member__name">adrianna</h2>
-        <p class="member__role">Senior Graphic Designer</p>
-        <p class="member__desc col-10 offset-1 col-sm-8 offset-sm-2">She is the graphic designer with 3 years of professional experience.</p>
+        <div class="member__info-border">
+          <h2 class="member__name">adrianna</h2>
+          <p class="member__role">Senior Graphic Designer</p>
+          <p class="member__desc col-10 offset-1 col-sm-8 offset-sm-2">She is the graphic designer with 3 years of professional experience.</p>
+        </div><!-- .member__info-border -->
       </div><!-- .member__desc -->
 
       <div class="member__image col-md-6">
         <div class="member__image-border"></div><!-- .member__image-border -->
       </div><!-- .member__image -->
     </div><!-- .member -->
+    
 
+    <div class="member row">
+      <div class="member__info col-md-6">
+        <div class="member__info-border">
+          <h2 class="member__name">olivia</h2>
+          <p class="member__role">Art Director</p>
+          <p class="member__desc col-10 offset-1 col-sm-8 offset-sm-2">She is the art director with 8 years of professional experience.</p>
+        </div><!-- .member__info-border -->
+      </div><!-- .member__desc -->
+
+      <div class="member__image member__image--olivia-bg col-md-6">
+        <div class="member__image-border"></div><!-- .member__image-border -->
+      </div><!-- .member__image -->
+    </div><!-- .member -->
   </div><!-- .container -->
 
 </section>
