Add the rest of the staff

--- a/_includes/staff.html
+++ b/_includes/staff.html
@@ -30,6 +30,36 @@
         <div class="member__image-border"></div><!-- .member__image-border -->
       </div><!-- .member__image -->
     </div><!-- .member -->
+    
+    <div class="member member--reverse row">
+      <div class="member__info col-md-6">
+        <div class="member__info-border">
+          <h2 class="member__name">thomas</h2>
+          <p class="member__role">Software Engeneer</p>
+          <p class="member__desc col-10 offset-1 col-sm-8 offset-sm-2">He is the software engeneer with 5 years of professional experience.</p>
+        </div><!-- .member__info-border -->
+      </div><!-- .member__desc -->
+
+      <div class="member__image member__image--thomas-bg col-md-6">
+        <div class="member__image-border"></div><!-- .member__image-border -->
+      </div><!-- .member__image -->
+    </div><!-- .member -->
+    
+
+    <div class="member row">
+      <div class="member__info col-md-6">
+        <div class="member__info-border">
+          <h2 class="member__name">taylor</h2>
+          <p class="member__role">CEO</p>
+          <p class="member__desc col-10 offset-1 col-sm-8 offset-sm-2">She is the boss in here.</p>
+        </div><!-- .member__info-border -->
+      </div><!-- .member__desc -->
+
+      <div class="member__image member__image--taylor-bg col-md-6">
+        <div class="member__image-border"></div><!-- .member__image-border -->
+      </div><!-- .member__image -->
+    </div><!-- .member -->
+
   </div><!-- .container -->
 
 </section>
